# test-fuzz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  dylint.toml  dylint_versions.txt  env.sh  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml  update.yml  update_dependencies.yml  update_patches.yml  update_supply_chain.yml
cargo-test-fuzz/: Cargo.toml  substrate_node_template.patch  third_party.json
cargo-test-fuzz/clippy_conf/: clippy.toml
cargo-test-fuzz/patches/: agave.patch  cw-plus.patch  example-helloworld.patch  solana.patch  solana_rbpf.patch  substrate_client_transaction_pool.patch  substrate_node_template.patch
cargo-test-fuzz/src/: lib.rs  to_exec.rs  transition.rs  var_guard.rs
cargo-test-fuzz/src/fuzzer/: mod.rs
cargo-test-fuzz/src/fuzzer/impls/: aflplusplus.rs  libfuzzer.rs  mod.rs
cargo-test-fuzz/tests/: auto.rs  auto_concretize.rs  auto_generate.rs  breadcrumbs.rs  build.rs  concretizations.rs  consolidate.rs  display.rs  fuzz.rs  fuzz_cast.rs  fuzz_generic.rs  generic.rs  install.rs  rename.rs  replay.rs  substrate.rs  test.rs  test_log.rs  third_party.rs
cargo-test-fuzz/tests/integration/: auto_generate.rs  breadcrumbs.rs  build.rs  consolidate.rs  coverage.rs  display.rs  fuzz.rs  fuzz_cast.rs  fuzz_generic.rs  fuzz_parallel.rs  fuzz_profile.rs  generic_args.rs  llvm_cov_show_env.rs  main.rs  multiple_failures.rs  replay.rs  warning.rs
dirs/: Cargo.toml  README.md
dirs/src/: lib.rs
doc/: crates.dot
docs/: crates.dot  libfuzzer_notes.md
etc/: expected_lcov.info
example/: Cargo.toml  test_build.sh
example/src/: lib.rs
example/tests/: debug.rs  qwerty.rs  rename.rs  test_fuzz_impl.rs
examples/: Cargo.toml  build.rs
examples/src/: lib.rs  main.rs
examples/tests/: afraid_of_number_7.rs  alloc.rs  arc.rs  assert.rs  associated_type.rs  auto_concretize.rs  auto_concretize_0.rs  calm_and_panicky.rs  cast.rs  collision.rs  conversion.rs  debug.rs  default.rs  from.rs  generic.rs  lifetime.rs  manual_leak.rs  parse_duration.rs  profile.rs  qwerty.rs  qwerty_stepped.rs  rename.rs  return_type.rs  self_ty_in_mod_name.rs  serde.rs  serde_attr.rs  test_fuzz_impl.rs  unserde.rs
examples/tests/auto_concretize_1/: auto_concretize_2.rs  mod.rs
fuzzable/: Cargo.toml
fuzzable/tests/: alloc.rs  associated_type.rs  auto_generate.rs  cast.rs  multiple_failures.rs  mut_ref.rs  no_test_fuzz.rs  parallel.rs  rename.rs  self_ty_in_mod_name.rs  unserde.rs
internal/: Cargo.toml  README.md  build.rs
internal/src/: auto_concretize.rs  dirs.rs  examples.rs  fuzzer.rs  lib.rs  serde_format.rs  testing.rs
macro/: Cargo.toml  README.md  build.rs
macro/src/: auto_concretize.rs  fuzzer.rs  lib.rs  mod_utils.rs  ord_type.rs  pat_utils.rs  path_utils.rs  type_utils.rs  util.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: lib.rs  libfuzzer.rs  traits.rs
scripts/: allow.txt  check_CHANGELOG.sh  check_allow.sh  check_licenses.sh  clippy.sh  dylint.sh  update_README.sh  update_patches.sh  update_revisions.sh  update_substrate_node_template_patch.sh  update_substrate_patches.sh  update_versions.sh
serde_combinators/: Cargo.toml
serde_combinators/src/: lib.rs  mutex.rs  ref_.rs  ref_mut.rs  rw_lock.rs  type_.rs
serde_combinators/tests/: ref_mut_mutex.rs  ref_rw_lock.rs
snapshots/: hello_world_lcov.info  sorted_hello_world_lcov.info
src/: lib.rs
test-fuzz/: Cargo.toml  build.rs
test-fuzz/src/: convert.rs  lib.rs  utils.rs
test-fuzz/src/utils/: mod.rs  serializable_mutex.rs  serializable_rw_lock.rs
test-fuzz/tests/: auto.rs  auto_generate.rs  ci.rs  conversion.rs  default.rs  github.rs  in_production.rs  link.rs  rename.rs  serde_format.rs  supply_chain.json  test_fuzz_log.rs  versions.rs
test-fuzz/tests/integration/: auto_generate.rs  ci.rs  conversion.rs  default.rs  in_production.rs  link.rs  main.rs  rename.rs  self_ty_in_mod_name.rs  serde_format.rs  test_fuzz_log.rs  versions.rs
testing/: Cargo.toml
testing/src/: command_ext.rs  examples.rs  fuzzable.rs  lib.rs  logged_assert.rs  retry.rs
tests/: default.rs  in_production.rs  rename.rs  versions.rs
