[workspace]
# smoelius: If a package that depends on `test-fuzz` is added to the workspace, then
# cargo-test-fuzz/tests/install.rs will need to be updated.
members = [
    "cargo-test-fuzz",
    "fuzzable",
    "internal",
    "macro",
    "runtime",
    "serde_combinators",
    "test-fuzz",
    "testing",
    "third-party",
]
resolver = "2"

[workspace.dependencies]
afl = { version = "0.17" }
anyhow = "1.0"
assert_cmd = "2.1"
bitflags = "2.11"
# smoelius: `cargo_metadata` 0.20.0 pulls in too many new dependencies.
cargo_metadata = "=0.19"
cast_checks = { version = "0.1" }
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
ctor = "0.6"
darling = "0.23"
env_logger = "0.11"
heck = "0.5"
hex = "0.4"
itertools = "0.14"
log = "0.4"
mio = { version = "1.1", features = ["os-ext", "os-poll"] }
num_cpus = "1.17"
num-traits = "0.2"
option_set = "0.4"
parse_duration = "2.1"
predicates = "3.1"
prettyplease = "0.2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
regex = "1.12"
remain = "0.2"
rustc_version = "0.4"
semver = "1.0"
serde_assert = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
sha1 = "0.10"
similar-asserts = "1.7"
strip-ansi-escapes = "0.2"
strum_macros = "0.28"
subprocess = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit", "visit-mut"] }
tempfile = "3.26"
termsize = "0.1"
toml_edit = "0.25"
walkdir = "2.5"
xshell = "0.2"

# smoelius: Internal packages
internal = { path = "internal", package = "test-fuzz-internal", version = "=7.3.0" }
runtime = { path = "runtime", package = "test-fuzz-runtime", version = "=7.3.0" }
test-fuzz = { path = "test-fuzz", version = "=7.3.0" }
test-fuzz-macro = { path = "macro", version = "=7.3.0" }
testing = { path = "testing", package = "test-fuzz-testing" }

# `serde_combinators` does not sync with `test-fuzz`'s version.
serde_combinators = { path = "serde_combinators", version = "0.1.0" }

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = [
    "cfg(dylint_lib, values(any()))",
    "cfg(fuzzing)",
    "cfg(serde_default)",
]

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive-complexity = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
multiple-bound-locations = "allow"
option-if-let-else = "allow"
redundant-pub-crate = "allow"
result-large-err = "allow"
struct-field-names = "allow"

[workspace.metadata.unmaintained]
ignore = [
    "parse_duration",
    "strip-ansi-escapes",
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
]
