[package]
name = "cargo-test-fuzz"
version = "5.2.0"
edition = "2021"

description = "cargo-test-fuzz"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[[bin]]
name = "cargo-test-fuzz"
path = "src/bin/cargo_test_fuzz/main.rs"

[lib]
doctest = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bitflags = "2.5"
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
env_logger = "0.11"
heck = "0.5"
log = "0.4"
mio = { version = "0.8", features = ["os-ext", "os-poll"] }
num_cpus = "1.16"
paste = "1.0"
remain = "0.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.26"
subprocess = "0.2"

internal = { path = "../internal", package = "test-fuzz-internal", version = "=5.2.0" }
test-fuzz = { path = "../test-fuzz", version = "=5.2.0" }

[dev-dependencies]
assert_cmd = "2.0"
once_cell = "1.19"
option_set = "0.2"
predicates = "3.1"
regex = "1.10"
rlimit = "0.10"
rustc_version = "0.4"
semver = "1.0"
serde_json = "1.0"
tempfile = "3.10"
walkdir = "2.5"
xshell = "0.2"

testing = { path = "../testing", package = "test-fuzz-testing" }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["paste"]
