[package]
name = "cargo-test-fuzz"
version = "5.2.0"
edition = "2021"

description = "cargo-test-fuzz"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[[bin]]
name = "cargo-test-fuzz"
path = "src/bin/cargo_test_fuzz/main.rs"

[lib]
doctest = false

[[test]]
name = "install"
required-features = ["test-install"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
bitflags = "2.5"
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
env_logger = "0.11"
heck = "0.5"
log = "0.4"
mio = { version = "1.0", features = ["os-ext", "os-poll"] }
num_cpus = "1.16"
remain = "0.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.26"
subprocess = "0.2"

internal = { path = "../internal", package = "test-fuzz-internal", version = "=5.2.0" }
test-fuzz = { path = "../test-fuzz", version = "=5.2.0" }

[dev-dependencies]
predicates = "3.1"
rlimit = "0.10"
tempfile = "3.10"
walkdir = "2.5"
xshell = "0.2"

testing = { path = "../testing", package = "test-fuzz-testing" }

[features]
test-install = []

[lints]
workspace = true

# smoelius: `xshell` is used only by the `install` tests, which are guarded by the `test-install`
# feature.
[package.metadata.cargo-udeps.ignore]
development = ["xshell"]
