[package]
name = "cargo-test-fuzz"
version = "7.1.1"
edition = "2021"

description = "cargo-test-fuzz"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"
default-run = "cargo-test-fuzz"

[[bin]]
name = "cargo-test-fuzz"
path = "src/bin/cargo_test_fuzz/main.rs"

[lib]
doctest = false

[[test]]
name = "install"
required-features = ["test-install"]

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
heck = { workspace = true }
log = { workspace = true }
mio = { workspace = true }
num_cpus = { workspace = true }
remain = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
strum_macros = { workspace = true }
subprocess = { workspace = true }

internal = { workspace = true }
test-fuzz = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rlimit = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
xshell = { workspace = true }

testing = { workspace = true }

[features]
test-install = []

[lints]
workspace = true

# smoelius: `xshell` is used only by the `install` tests, which are guarded by the `test-install`
# feature.
[package.metadata.cargo-udeps.ignore]
development = ["xshell"]
