[package]
name = "test-fuzz-examples"
version = "5.1.0"
edition = "2021"
publish = false

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
test-fuzz = { path = "../test-fuzz", version = "=5.1.0" }

[dev-dependencies]
once_cell = "1.19"
parse_duration = "2.1"
serde_json = "1.0"

[features]
__bar_fuzz = []
__inapplicable_conversion = []
__self_ty_conflict = []

[lints]
workspace = true
