[package]
name = "test-fuzz-examples"
version = "5.2.2"
edition = "2021"
publish = false

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
test-fuzz = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
parse_duration = { workspace = true }
serde_json = { workspace = true }

[features]
__bar_fuzz = []
__inapplicable_conversion = []
__self_ty_conflict = []

# smoelius: Features used by the `qwerty_stepped` test.
__qwerty_q = []
__qwerty_w = []
__qwerty_e = []
__qwerty_r = []
__qwerty_t = []
__qwerty_y = []

[lints]
workspace = true
