[package]
name = "test-fuzz-examples"
version = "7.2.2"
edition = "2021"
publish = false

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
test-fuzz = { workspace = true }

[dev-dependencies]
parse_duration = { workspace = true }
serde_json = { workspace = true }

[features]
__bar_fuzz = []
__inapplicable_conversion = []
__self_ty_conflict = []

[lints]
workspace = true
