[package]
name = "test-fuzz-fuzzable"
version = "7.2.5"
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true }
test-fuzz = { workspace = true }

[dev-dependencies]
parse_duration = { workspace = true }
serde_json = { workspace = true }

[features]
__bar_fuzz = []
__inapplicable_conversion = []
__no_test_fuzz = []
__self_ty_conflict = []

[lints]
workspace = true
