[package]
name = "test-fuzz-fuzzable"
version = "7.2.5"
edition = "2024"
publish = false

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
test-fuzz = { workspace = true }

[dev-dependencies]
parse_duration = { workspace = true }
serde_json = { workspace = true }

[features]
__bar_fuzz = []
__inapplicable_conversion = []
__self_ty_conflict = []

[lints]
workspace = true
