[package]
name = "test-fuzz-macro"
version = "5.0.0"
edition = "2021"

description = "test-fuzz-macro"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
heck = { version = "0.5", optional = true }
itertools = "0.12"
once_cell = "1.19"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit", "visit-mut"] }

[features]
__cast_checks = []
__persistent = []
__self_ty_in_mod_name = ["heck"]

[lints]
workspace = true
