[package]
name = "test-fuzz-macro"
version = "7.2.3"
edition = "2021"

description = "test-fuzz-macro"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
__cast_checks = []
__persistent = []

[lints]
workspace = true
