[package]
name = "test-fuzz-runtime"
version = "5.2.0"
edition = "2021"

description = "test-fuzz-runtime"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[dependencies]
hex = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"

internal = { path = "../internal", package = "test-fuzz-internal", version = "=5.2.0" }

[lints]
workspace = true
