[package]
name = "test-fuzz-runtime"
version = "5.2.2"
edition = "2021"

description = "test-fuzz-runtime"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[dependencies]
hex = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }

internal = { workspace = true }

[lints]
workspace = true
