[package]
name = "test-fuzz"
version = "4.0.4"
edition = "2021"

description = "To make fuzzing Rust easy"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[dependencies]
afl = { version = "0.15", optional = true }
serde = "1.0"

internal = { path = "../internal", package = "test-fuzz-internal", version = "=4.0.4" }
runtime = { path = "../runtime", package = "test-fuzz-runtime", version = "=4.0.4" }
test-fuzz-macro = { path = "../macro", version = "=4.0.4" }

[dev-dependencies]
assert_cmd = "2.0"
cargo_metadata = "0.18"
ctor = "0.2"
once_cell = "1.19"
predicates = "3.0"
regex = "1.10"
semver = "1.0"
serde_json = "1.0"
similar-asserts = "1.5"

testing = { path = "../testing", package = "test-fuzz-testing" }

# smoelius: A list of formats we might support can be found here:
# https://github.com/djkoloski/rust_serialization_benchmark

[features]
auto_concretize = [
    "internal/__auto_concretize",
    "test-fuzz-macro/__auto_concretize",
]
serde_bincode = ["internal/__serde_bincode"]
serde_cbor = ["internal/__serde_cbor"]
serde_cbor4ii = ["internal/__serde_cbor4ii"]
__persistent = ["afl", "test-fuzz-macro/__persistent"]

[package.metadata.cargo-udeps.ignore]
normal = ["afl"]
