[package]
name = "test-fuzz"
version = "5.2.2"
edition = "2021"

description = "To make fuzzing Rust easy"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "AGPL-3.0 WITH mif-exception"
repository = "https://github.com/trailofbits/test-fuzz"

[dependencies]
afl = { workspace = true, optional = true }
cast_checks = { workspace = true, optional = true }
serde = { workspace = true }

internal = { workspace = true }
runtime = { workspace = true }
test-fuzz-macro = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cargo_metadata = { workspace = true }
ctor = { workspace = true }
once_cell = { workspace = true }
predicates = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
similar-asserts = { workspace = true }

testing = { workspace = true }

# smoelius: A list of formats we might support can be found here:
# https://github.com/djkoloski/rust_serialization_benchmark

[features]
cast_checks = ["dep:cast_checks", "test-fuzz-macro/__cast_checks"]
self_ty_in_mod_name = ["test-fuzz-macro/__self_ty_in_mod_name"]
serde_bincode = ["internal/__serde_bincode"]
serde_postcard = ["internal/__serde_postcard"]
__persistent = ["afl", "test-fuzz-macro/__persistent"]

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
normal = ["afl"]
