[package]
name = "test-fuzz-testing"
version = "4.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
cargo_metadata = "0.18"
ctor = "0.2"
env_logger = "0.10"
if_chain = "1.0"
log = "0.4"
once_cell = "1.18"
retry = "2.0"
subprocess = "0.2"

internal = { path = "../internal", package = "test-fuzz-internal", version = "=4.0.1" }
