[package]
name = "test-fuzz-testing"
version = "7.2.2"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
cargo_metadata = { workspace = true }
ctor = { workspace = true }
env_logger = { workspace = true }
if_chain = { workspace = true }
log = { workspace = true }
strip-ansi-escapes = { workspace = true }
subprocess = { workspace = true }

internal = { workspace = true }

[lints]
workspace = true
