[package]
name = "test-fuzz-testing"
version = "7.2.3"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
cargo_metadata = { workspace = true }
ctor = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
strip-ansi-escapes = { workspace = true }
subprocess = { workspace = true }

internal = { workspace = true }

[lints]
workspace = true
